<resources>
    <string name="app_name">TechClass</string>
    <string-array name="list_sample">
        <item>• The currently loaded USB driver has become unstable or corrupt</item>
        <item>•	Your PC motherboard may need updated drivers</item>
        <item>•	Your PC requires an update for issues that may conflict with a USB external hard drive and Windows</item>
        <item>•	Your external drive may be entering selective suspend</item>
        <item>•	Windows may be missing other important updates hardware or software issues</item>
        <item>•	Your USB controllers may have become unstable or corrupt</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tools">Tools</string>
    <string name="cable">Cable</string>
    <string name="materials">Materials</string>
    <string name="crimping_tool">Crimping Tool</string>
    <string name="rj_45_connectors">RJ-45 connectors</string>
    <string name="step">Step</string>
    <string name="_2">2</string>
    <string name="untwist_and_straighten_the_wires_inside_of_the_cable">Untwist and straighten the wires inside of the cable.</string>
    <string name="separate_the_wires_and_straighten_them_out_so_that_its_easier_to_sort_them_into_the_right_order">Separate the wires and straighten them out so that its easier to sort them into the right order.</string>
    <string name="_3">3</string>
    <string name="arrange_the_wires_into_the_right_order">Arrange the wires into the right order.</string>
    <string name="arrange_the_wires_in_a_proper_sequence_from_left_to_right_orange_white_orange_green_white_blue_blue_white_green_brown_white_brown">Arrange the wires in a proper sequence from left to right: Orange-White, Orange, Green-White, Blue, Blue-White, Green, Brown-White, Brown.</string>
    <string name="_4">4</string>
    <string name="cut_the_wires_into_an_even_line_1_2_inch">Cut the wires into an even line 1/2 inch.</string>
    <string name="hold_the_wires_with_your_thumb_and_index_finger_to_keep_them_in_order_then_use_the_cutting_section_of_the_crimping_tool_to_cut_them_into_an_even_line">Hold the wires with your thumb and index finger to keep them in order. Then, use the cutting section of the crimping tool to cut them into an even line.</string>
    <string name="_5">5</string>
    <string name="insert_the_wires_into_the_rj_45">Insert the wires into the RJ-45</string>
    <string name="hold_the_rj_45_connector_in_which_the_small_metal_pis_are_facing_up_and_the_clip_is_on_the_underside_keep_the_wires_in_order_and_put_them_into_the_rj_45">Hold the RJ-45 connector in which the small metal pis are facing up and the clip is on the underside. Keep the wires in order and put them into the RJ-45.</string>
    <string name="_6">6</string>
    <string name="stick_the_connector_into_the_crimping_tool_part_and_squeeze_twice">Stick the connector into the crimping tool part and squeeze twice.</string>
    <string name="insert_it_until_it_can_t_fit_any_further_and_then_queeze_it_make_sure_all_the_pins_are_pushed_down">Insert it until it can\'t fit any further and then queeze it. Make sure all the pins are pushed down.</string>
</resources>