<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


        <TextView
            android:id="@+id/tvLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/step"
            android:textColor="@color/SeaGreen"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLabel2"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/_3"
        android:textColor="@color/Black"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLabel2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:layout_toEndOf="@id/textView15"
        android:layout_toRightOf="@id/textView15"
        android:text="@string/arrange_the_wires_into_the_right_order"
        android:textSize="18sp"
        android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView16"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/arrange_the_wires_in_a_proper_sequence_from_left_to_right_orange_white_orange_green_white_blue_blue_white_green_brown_white_brown"
            android:layout_marginStart="20dp" />

         <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:layout_below="@id/textView18"
            android:layout_marginTop="10dp"
            android:src="@drawable/label"
            tools:ignore="contentDescription"/>
</RelativeLayout>