<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


        <TextView
            android:id="@+id/tvLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/step"
            android:textColor="@color/SeaGreen"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabel2"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/_6"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabel2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/textView15"
            android:layout_toRightOf="@id/textView15"
            android:text="@string/stick_the_connector_into_the_crimping_tool_part_and_squeeze_twice"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView16"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/insert_it_until_it_can_t_fit_any_further_and_then_queeze_it_make_sure_all_the_pins_are_pushed_down"
            android:layout_marginStart="20dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/textView18"
        android:layout_marginTop="17dp"
        android:scaleType="centerCrop"
        android:src="@drawable/crimpingtool"
        tools:ignore="contentDescription" />


</RelativeLayout>