<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

        <TextView
            android:id="@+id/tvLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/step"
            android:textColor="@color/SeaGreen"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabel2"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/_4"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabel2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/textView15"
            android:layout_toRightOf="@id/textView15"
            android:text="@string/cut_the_wires_into_an_even_line_1_2_inch"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView16"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/hold_the_wires_with_your_thumb_and_index_finger_to_keep_them_in_order_then_use_the_cutting_section_of_the_crimping_tool_to_cut_them_into_an_even_line"
            android:layout_marginStart="20dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/textView18"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/crimp04"
        tools:ignore="contentDescription" />

</RelativeLayout>