<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrimpFragment1">

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="175dp"
        android:layout_height="85dp"
        android:layout_below="@id/textView7"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/rj45"
        tools:ignore="contentDescription"
        android:layout_marginStart="30dp" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="175dp"
        android:layout_height="85dp"
        android:layout_below="@id/imageView22"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/vable"
        tools:ignore="contentDescription"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/tools"
        android:textColor="@color/Black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp" />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/imageView21"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@color/White" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="175dp"
        android:layout_height="80dp"
        android:layout_below="@id/textView2"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/crimp_two"
        android:layout_marginStart="30dp"
        tools:ignore="contentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@id/imageView21"
        android:text="@string/crimping_tool"
        android:layout_toEndOf="@id/imageView21" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/materials"
        android:textColor="@color/SeaGreen"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView7"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@id/imageView22"
        android:text="@string/rj_45_connectors"
        android:layout_toEndOf="@id/imageView22" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView22"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@id/imageView23"
        android:text="@string/cable"
        android:layout_toEndOf="@id/imageView23" />

</RelativeLayout>