<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvLabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/step"
        android:textColor="@color/SeaGreen"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLabel2"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/_5"
        android:textColor="@color/Black"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLabel2"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/textView15"
        android:layout_toRightOf="@id/textView15"
        android:text="@string/insert_the_wires_into_the_rj_45"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView16"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/hold_the_rj_45_connector_in_which_the_small_metal_pis_are_facing_up_and_the_clip_is_on_the_underside_keep_the_wires_in_order_and_put_them_into_the_rj_45"
        android:layout_marginStart="20dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:layout_below="@id/textView18"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/crimp05"
        tools:ignore="contentDescription" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:layout_below="@id/imageView9"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/crimp06"
        tools:ignore="contentDescription" />

</RelativeLayout>

</ScrollView>