<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/step"
            android:textColor="@color/SeaGreen"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabel2"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/_2"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabel2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/textView15"
            android:layout_toRightOf="@id/textView15"
            android:text="@string/untwist_and_straighten_the_wires_inside_of_the_cable"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView16"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/separate_the_wires_and_straighten_them_out_so_that_its_easier_to_sort_them_into_the_right_order"
            android:layout_marginStart="20dp" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_below="@id/textView18"
            app:srcCompat="@drawable/wire_one" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:layout_below="@id/imageView25"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/wire_two" />
</RelativeLayout>

</ScrollView>