<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            android:textSize="1sp"/>

        <TextView
            android:id="@+id/tvLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="Step"
            android:textColor="@color/SeaGreen"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabel2"
            android:layout_marginLeft="30dp"
            android:text="@string/_4"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabel2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/textView15"
            android:text="Scroll down to Multiple displays, then select an option from the drop-down list to determine how your desktop will display across your screens. For the largest work area, select Extend desktop."
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView37"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_below="@id/textView16"
            android:src="@drawable/display" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView37"
            android:layout_marginLeft="30dp"
            android:text="@string/_5"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView37"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/textView15"
            android:text="Select Keep changes."
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView34"
            android:layout_width="wrap_content"
            android:layout_height="155dp"
            android:layout_below="@id/textView17"
            android:src="@drawable/dualfour" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView34"
            android:layout_marginLeft="30dp"
            android:text="@string/_6"
            android:textColor="@color/Black"
            android:textSize="30sp"
            android:layout_marginBottom="10dp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView34"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toRightOf="@id/textView15"
            android:text="Save changes."
            android:textSize="16sp"/>

    </RelativeLayout>
</ScrollView>